updated text at features section

--- a/html.html
+++ b/html.html
@@ -64,7 +64,7 @@
 
       <div id="features">
         <h2>Features</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p>This is about Features</p>
         <div class="grid-template">
           <button class="feature">
             <div class="feature-inside">
