--- a/html.html
+++ b/html.html
@@ -121,7 +121,7 @@
               <span><i class="fa-solid fa-folder-minus fa-2x"></i></span>
               <h4>Dashboard</h4>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                This is about Dashboard
                 Quibusdam
               </p>
             </div>
