This is how it works Updated

--- a/html.html
+++ b/html.html
@@ -161,8 +161,7 @@
           <div class="row-info">
             <h3>How does it work?</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae,
-              non placeat reprehenderit repudiandae minima distinctio.
+              This is about how does it work
             </p>
           </div>
         </section>
