Changed main text

--- a/html.html
+++ b/html.html
@@ -34,8 +34,7 @@
           <h1 class="title">Landing Template for Startups</h1>
           <div class="text-button">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-              magni quisquam facilis est numquam! Perspiciatis excepturi.
+              This is main text.
             </p>
             <button class="button">Pricing and Plans</button>
           </div>
