Updated employees in span element

--- a/html.html
+++ b/html.html
@@ -220,7 +220,7 @@
             <ul class="list" role="list">
               <li>
                 <i class="fas fa-check-circle"></i>
-                <span>7,000,000+ Events</span>
+                <span>8, 000 ,000+ Events</span>
               </li>
               <li>
                 <i class="fas fa-check-circle"></i>
