Adding 'alt' attribute to google img

--- a/html.html
+++ b/html.html
@@ -46,7 +46,7 @@
 
         <ul class="popular-brands">
           <li>
-            <img src="images/google.png" alt="" />
+            <img src="images/google.png" alt="google" />
           </li>
           <li>
             <img src="images/slack.png" alt="" />
