Update html.html - Addong 'alt' attribute do amazon img

--- a/html.html
+++ b/html.html
@@ -52,7 +52,7 @@
             <img src="images/slack.png" alt="" />
           </li>
           <li>
-            <img src="images/amazon.png" alt="" />
+            <img src="images/amazon.png" alt="amazon" />
           </li>
           <li>
             <img src="images/zoom.png" alt="" />
