Update html.html - Adding alt attributes

--- a/html.html
+++ b/html.html
@@ -49,13 +49,13 @@
             <img src="images/google.png" alt="google" />
           </li>
           <li>
-            <img src="images/slack.png" alt="" />
+            <img src="images/slack.png" alt="slack" />
           </li>
           <li>
             <img src="images/amazon.png" alt="amazon" />
           </li>
           <li>
-            <img src="images/zoom.png" alt="" />
+            <img src="images/zoom.png" alt="zoom" />
           </li>
           <li><img src="images/netflix.png" alt="" /></li>
         </ul>
