Update html.html - All img have alt attrutes

--- a/html.html
+++ b/html.html
@@ -57,7 +57,7 @@
           <li>
             <img src="images/zoom.png" alt="zoom" />
           </li>
-          <li><img src="images/netflix.png" alt="" /></li>
+          <li><img src="images/netflix.png" alt="netflix" /></li>
         </ul>
       </div>
 
